Add playback control to animations.

--- a/tool/Macad.UserGuide.csproj
+++ b/tool/Macad.UserGuide.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="Docfx.App" Version="2.77.0" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
