Added doc for running the app on other platforms like MacOS and Linux.

--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -10,4 +10,6 @@
   href: Modeling/toc.yml
 - name: Scripting
   href: Scripting/toc.yml
+- name: Platforms
+  href: Misc/Platforms.md
 - href: License/License.md
