Changelog and updated infos for Release 4.

--- a/docs/Changelog/toc.yml
+++ b/docs/Changelog/toc.yml
@@ -1,3 +1,5 @@
+- name: What's new in Release 4
+  href: Changelog-v4.md
 - name: What's new in Release 3
   href: Changelog-v3.md
 - name: What's new in Release 2
